--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/qr-scanner": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
+    "@ionic-native/toast": "^4.20.0",
+    "@ionic-native/vibration": "^4.20.0",
     "@ionic-native/zbar": "^4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
-    "cordova-plugin-cszbar": "1.3.4",
+    "cordova-plugin-cszbar": "git+https://github.com/zhanglongchina/csZBar.git",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "2.5.2",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -46,7 +51,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-cszbar": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -54,7 +58,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-cszbar": {}
     },
     "platforms": [
       "android"
