--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/vibration": "^4.20.0",
     "@ionic-native/zbar": "^4.20.0",
     "@ionic/storage": "2.2.0",
+    "@zxing/ngx-scanner": "^2.0.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-cszbar": "git+https://github.com/zhanglongchina/csZBar.git",
     "cordova-plugin-device": "^2.0.2",
@@ -37,7 +38,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-vibration": "3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-toast": "2.5.2",
+    "cordova-plugin-x-toast": "git+https://github.com/zhanglongchina/Toast-PhoneGap-Plugin.git",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.2",
-    "typescript": "~2.6.2"
+    "typescript": "^3.6.4"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -61,7 +62,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-vibration": {},
       "cordova-plugin-x-toast": {},
-      "cordova-plugin-cszbar": {}
+      "cordova-plugin-cszbar": {},
+      "cordova-plugin-backbutton": {}
     },
     "platforms": [
       "android"
